# egui_pinger

./: .gitignore  Cargo.toml  README.md  TODO.md  build-releases.sh  build.rs  messages.po  research.md  test.pot  Специфікація.md
.agent/workflows/: i.md  s.md
assets/linux/: com.github.vlisivka.EguiPinger.desktop  egui_pinger.desktop
locales/: messages.pot  uk.po
locales/uk/LC_MESSAGES/: egui_pinger.mo
mos/: Cargo.toml
mos/src/: lib.rs  main.rs
mos/tests/: integration.rs
mos/tests/fixtures/: linux_en.txt  linux_timeout.txt  linux_ua.txt  linux_ua_long.txt  windows_ua.txt
plans/: Plan - Fixing Network Diagnostics.md  Plan - GUI Integration Testing.md  Plan - Individual Host Stop.md  Plan - Localization and I18n.md  Plan - Log Viewer.md  Plan - Logic Refactoring and Testing.md  Plan - Ping Intervals and Modes.md  Plan - Refactoring Code Quality.md  Plan - System Tools.md  Plan - mos utility.md  Plan_IPv6_Support.md  Plan_Traceroute_Implementation.md
src/: app.rs  constants.rs  lib.rs  main.rs
src/logic/: mod.rs  pinger.rs  pinger_tests.rs  tracer.rs
src/model/: app_state.rs  mod.rs  status.rs  status_tests.rs
src/ui/: help.rs  host_row.rs  host_settings.rs  log_viewer.rs  mod.rs  route_viewer.rs  system_tools.rs
tests/: gui_tests.rs
