[package]
name = "egui_pinger"
version = "0.2.0"
edition = "2024"
authors = ["Volodymyr M. Lisivka <vlisivka@gmail.com>"]
description = "Simple pinger for multiple servers with graph and jitter."
license = "GPL-3.0-or-later"
repository = "https://github.com/vlisivka/egui_pinger"
keywords = ["egui", "ping"]

[dependencies]
eframe = { version = "0.31", features = ["persistence", "wgpu"] }
wgpu = { version = "*", features = ["glsl", "angle"] }
egui_extras = { version = "0.31", features = ["all_loaders"] }
egui_plot = "0.31"

tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }
surge-ping = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tr = "0.1"

[features]
default = []
embed-locales = ["tr/mo-translator"]

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
#panic = 'abort'

[profile.dev]
opt-level = 1
debug = 0

[dev-dependencies]
egui_kittest = "0.31"
