[package]
name = "egui_pinger"
version = "0.3.0"
edition = "2024"
authors = ["Volodymyr M. Lisivka <vlisivka@gmail.com>"]
description = "Simple pinger for multiple servers with graph and jitter."
license = "GPL-3.0-or-later"
repository = "https://github.com/vlisivka/egui_pinger"
keywords = ["egui", "ping"]

[target.'cfg(not(windows))'.dependencies]
tr = "0.1"

[target.'cfg(windows)'.dependencies]
tr = { version = "0.1", default-features = false, features = ["mo-translator"] }

[dependencies]
eframe = { version = "0.33", features = ["persistence", "wgpu"] }
wgpu = { version = "27", features = ["glsl", "angle"] }
egui_extras = { version = "0.33", features = ["all_loaders"] }
egui_plot = "0.34"

tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.10.0"
ping-async = "1.0.2"

[features]
default = []
embed-locales = ["tr/mo-translator"]

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
#panic = 'abort'

[profile.dev]
opt-level = 1
debug = 0

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
egui_kittest = "0.33"
